tests/invalid/casestatements.nim
case a
  of 1:
    echo a
